--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.profiles.active=dev
 
-default.sender=ognavi@gamil.com
-default.recipient=ognavi@gamil.com
+default.sender=ognavi@gmail.com
+default.recipient=ognavi@gmail.com
