--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ default.sender=ognavi@gmail.com
 default.recipient=ognavi@gmail.com
 
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
-jwt.expiration=60000
+jwt.expiration=86400000
